Publication list updated.

--- a/publist.html
+++ b/publist.html
@@ -57,6 +57,32 @@ See also:
 
 <dl>
 
+<dt> <a href="papers/2020s/24/Seroussi_etal_2024_EF.html">
+     Seroussi, H., T. Pelle, W. H. Lipscomb, A. Abe-Ouchi, T. Albrecht,
+     J. Alvarez-Solas, X. Asay-Davis, J.-B. Barre, C. J. Berends, J. Bernales,
+     J. Blasco, J. Caillet, D. M. Chandler, V. Coulon, R. Cullather, C. Dumas,
+     B. K. Galton-Fenzi, J. Garbe, F. Gillet-Chaulet, R. Gladstone,
+     H. Goelzer, N. Golledge, R. Greve, G. H. Gudmundsson, H. K. Han,
+     T. R. Hillebrand, M. J. Hoffman, P. Huybrechts, N. C. Jourdain,
+     A. K. Klose, P. M. Langebroek, G. R. Leguy, D. P. Lowry, P. Mathiot,
+     M. Montoya, M. Morlighem, S. Nowicki, F. Pattyn, A. J. Payne, A. Quiquet,
+     R. Reese, A. Robinson, L. Saraste, E. G. Simon, S. Sun, J. P. Twarog,
+     L. D. Trusel, B. Urruty, J. Van Breedam, R. S. W. van de Wal, Y. Wang,
+     C. Zhao and T. Zwinger. 2024.</a></dt>
+<dd> Evolution of the Antarctic Ice Sheet over the next three centuries
+     from an ISMIP6 model ensemble.<br>
+     <i>Earth's Future</i> (submitted).</dd>
+
+<dt> <a href="papers/2020s/24/Willeit_etal_2024_CP.html">
+     Willeit, M., R. Calov, S. Talento, R. Greve, J. Bernales, V. Klemann,
+     M. Bagge and A. Ganopolski. 2024.</a></dt>
+<dd> Glacial inception through rapid ice area increase driven by albedo and
+     vegetation feedbacks.<br>
+     <i>Climate of the Past</i> (submitted).<br>
+     <i>EGUsphere</i>,
+     <a href="https://doi.org/10.5194/egusphere-2023-1462">doi:
+     10.5194/egusphere-2023-1462</a> (preprint, 2023).</dd>
+
 <dt> <a href="papers/2020s/23/Gaikwad_etal_2023_JOSS.html">
      Gaikwad, S. S., L. Hascoet, S. H. K. Narayanan, L. Curry-Logan, R. Greve
      and P. Heimbach. 2023.</a></dt>
@@ -170,16 +196,6 @@ See also:
      <!-- <i>The Cryosphere Discussions</i>,
           <a href="https://doi.org/10.5194/tc-2023-109">doi:
           10.5194/tc-2023-109</a> (preprint). -->
-
-<dt> <a href="papers/2020s/23/Willeit_etal_2023_CP.html">
-     Willeit, M., R. Calov, S. Talento, R. Greve, J. Bernales, V. Klemann,
-     M. Bagge and A. Ganopolski. 2023.</a></dt>
-<dd> Glacial inception through rapid ice area increase driven by albedo and
-     vegetation feedbacks.<br>
-     <i>Climate of the Past</i> (submitted).<br>
-     <i>EGUsphere</i>,
-     <a href="https://doi.org/10.5194/egusphere-2023-1462">doi:
-     10.5194/egusphere-2023-1462</a> (preprint).</dd>
 
 <dt> <a href="papers/2020s/22/Chambers_etal_2022_JoG.html">
      Chambers, C., R. Greve, T. Obase, F. Saito and A. Abe-Ouchi.
@@ -3680,7 +3696,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2023-12-08
+<p align="right">&nbsp;<br>Last modified: 2024-02-13
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
