--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 
 <ul>
 
+<li>First semester 2024:
+<br>
+<b>Fundamental Course in Cold Region Sciences</b>
+<br>
+&nbsp;&nbsp;&nbsp;
+[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=136779"
+    target="new">HU ELMS/Moodle</a> (account required)]
+</li>
+
 <li> Second semester 2023:
 <br>
 <b>Advanced Course in Theoretical Glaciology</b>
@@ -95,14 +104,14 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
     target="new">HU ELMS/Moodle</a> (account required)]
 </li>
 
-<li>First semester 2023:
+<!-- <li>First semester 2023:
 <br>
 <b>Fundamental Course in Cold Region Sciences</b>
 <br>
 &nbsp;&nbsp;&nbsp;
 [<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=123484"
     target="new">HU ELMS/Moodle</a> (account required)]
-</li>
+</li> -->
 
 </ul>
 
@@ -138,7 +147,7 @@ Information about the <a href="https://www2.lowtem.hokudai.ac.jp/gisg/en/rironne
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2023-11-15
+<p align="right">&nbsp;<br>Last modified: 2024-03-05
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
