Publication list updated.

--- a/papers/2020s/24/Willeit_etal_2024_CP.html
+++ b/papers/2020s/24/Willeit_etal_2024_CP.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Ralf Greve">
   <meta name="content-language" content="en">
   <meta name="robots" content="index, follow">
-  <title>Willeit and others (submitted)</title>
+  <title>Willeit and others (2024)</title>
   <link href="../../../styles/ralf_style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -33,23 +33,25 @@ vegetation feedbacks</h2>
 
 <h4 style="color:#000000;">Abstract</h4>
 
-<p>We present transient simulations of the last glacial inception using the Earth system model CLIMBER-X with dynamic vegetation, interactive ice sheets and visco-elastic solid-Earth response. The simulations are initialized at the middle of the Eemian interglacial (125 kiloyears before present, ka) and run until 100&nbsp;ka, driven by prescribed changes in Earth's orbital parameters and greenhouse gas concentrations from ice core data.</p>
+<p>We present transient simulations of the last glacial inception using the Earth system model CLIMBER-X with dynamic vegetation, interactive ice sheets, and visco-elastic solid Earth responses. The simulations are initialized at the middle of the Eemian interglacial (125 kiloyears before present, ka) and run until 100&nbsp;ka, driven by prescribed changes in Earth's orbital parameters and greenhouse gas concentrations from ice core data.</p>
 
-<p>CLIMBER-X simulates a rapid increase in Northern Hemisphere ice sheet area through MIS5d, with ice sheets expanding over northern North America and Scandinavia, in broad agreement with proxy reconstructions. While most of the increase in ice sheet area occurs over a relatively short period between 119&nbsp;ka and 117&nbsp;ka, the larger part of the increase in ice volume occurs afterwards with an almost constant ice sheet extent.</p>
+<p>CLIMBER-X simulates a rapid increase in Northern Hemisphere ice sheet area through MIS5d, with ice sheets expanding over northern North America and Scandinavia, in broad agreement with proxy reconstructions. While most of the increase in ice sheet area occurs over a relatively short period between 119 and 117&nbsp;ka, the larger part of the increase in ice volume occurs afterwards with an almost constant ice sheet extent.</p>
 
-<p>We show that the vegetation feedback plays a fundamental role in controlling the ice sheet expansion during the last glacial inception. In particular, with prescribed present-day vegetation the model simulates a global sea level drop of only &sim;20&nbsp;m, compared with the &sim;35&nbsp;m decrease in sea level with dynamic vegetation response. The ice sheet and carbon-cycle feedbacks play only a minor role during the ice sheet expansion phase prior to &sim;115&nbsp;ka, but are important in limiting the deglaciation during the following phase characterized by increasing summer insolation.</p>
+<p>We show that the vegetation feedback plays a fundamental role in controlling the ice sheet expansion during the last glacial inception. In particular, with prescribed present-day vegetation the model simulates a global sea level drop of only &sim;20&nbsp;m, compared with the &sim;35&nbsp;m decrease in sea level with dynamic vegetation response. The ice sheet and carbon cycle feedbacks play only a minor role during the ice sheet expansion phase prior to &sim;115&nbsp;ka but are important in limiting the deglaciation during the following phase characterized by increasing summer insolation.</p>
 
-<p>The model results are sensitive to climate model biases and to the parameterisation of snow albedo, while they show only a weak dependence on changes in the ice sheet model resolution and the acceleration factor used to speed up the climate component.</p>
+<p>The model results are sensitive to climate model biases and to the parameterization of snow albedo, while they show only a weak dependence on changes in the ice sheet model resolution and the acceleration factor used to speed up the climate component.</p>
 
-<p>Overall, our simulations confirm and refine previous results showing that climate-vegetation-cryosphere-carbon cycle feedbacks play a fundamental role in the transition from interglacial to glacial states characterising Quaternary glacial cycles.</p>
+<p>Overall, our simulations confirm and refine previous results showing that climate-vegetation-cryosphere feedbacks play a fundamental role in the transition from interglacial to glacial states characterizing Quaternary glacial cycles.</p>
 
 <hr>
 
-<p><i>Climate of the Past</i> (submitted).
-<i>EGUsphere</i>,
-<a href="https://doi.org/10.5194/egusphere-2023-1462">doi:
-10.5194/egusphere-2023-1462</a> (preprint, 2023).
-</p>
+<p><i>Climate of the Past</i> <b>20</b>&nbsp;(3), 597-623 (2024).
+   &nbsp;
+   <img style="vertical-align:middle"
+        src="../../../pictures/open_access_external_link_10x14.png"
+        alt="open access/external link"
+        title="open access/external link">
+   <a href="https://doi.org/10.5194/cp-20-597-2024">DOI</a></p>
 
 </td></tr>
 </table>
@@ -57,7 +59,7 @@ vegetation feedbacks</h2>
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p>&nbsp;<br><i>Last modified: 2024-02-13</i><br>&nbsp;</p>
+<p>&nbsp;<br><i>Last modified: 2024-03-19</i><br>&nbsp;</p>
 
 </td></tr>
 </table>
