--- a/publist.html
+++ b/publist.html
@@ -78,10 +78,28 @@ See also:
      M. Bagge and A. Ganopolski. 2024.</a></dt>
 <dd> Glacial inception through rapid ice area increase driven by albedo and
      vegetation feedbacks.<br>
-     <i>Climate of the Past</i> (submitted).<br>
-     <i>EGUsphere</i>,
+     <i>Climate of the Past</i> <b>20</b>&nbsp;(3), 597-623.<br>
+     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     <a href="papers/2020s/24/Willeit_etal_2024_CP.bib"><img
+     style="vertical-align:middle" src="pictures/bibtex_40x14.png"
+     alt="BibTeX"></a>
+     |
+     <a href="papers/2020s/24/Willeit_etal_2024_CP.ris">RIS</a>
+     |
+     <img style="vertical-align:middle"
+          src="pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.5194/cp-20-597-2024">DOI</a>
+     |
+     <img style="vertical-align:middle"
+          src="pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://hdl.handle.net/2115/xxxxx">HUSCAP</a></dd>
+     <!-- <i>EGUsphere</i>,
      <a href="https://doi.org/10.5194/egusphere-2023-1462">doi:
-     10.5194/egusphere-2023-1462</a> (preprint, 2023).</dd>
+     10.5194/egusphere-2023-1462</a> (preprint, 2023). -->
 
 <dt> <a href="papers/2020s/23/Gaikwad_etal_2023_JOSS.html">
      Gaikwad, S. S., L. Hascoet, S. H. K. Narayanan, L. Curry-Logan, R. Greve
@@ -3696,7 +3714,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2024-02-13
+<p align="right">&nbsp;<br>Last modified: 2024-03-19
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
