Publication list updated.

--- a/publist.html
+++ b/publist.html
@@ -96,7 +96,7 @@ See also:
           src="pictures/open_access_external_link_10x14.png"
           alt="open access/external link"
           title="open access/external link">
-     <a href="https://hdl.handle.net/2115/xxxxx">HUSCAP</a></dd>
+     <a href="https://hdl.handle.net/2115/91358">HUSCAP</a></dd>
      <!-- <i>EGUsphere</i>,
      <a href="https://doi.org/10.5194/egusphere-2023-1462">doi:
      10.5194/egusphere-2023-1462</a> (preprint, 2023). -->
@@ -210,7 +210,7 @@ See also:
           src="pictures/open_access_external_link_10x14.png"
           alt="open access/external link"
           title="open access/external link"> 
-     <a href="https://hdl.handle.net/2115/xxxxx">HUSCAP</a></dd>
+     <a href="https://hdl.handle.net/2115/91357">HUSCAP</a></dd>
      <!-- <i>The Cryosphere Discussions</i>,
           <a href="https://doi.org/10.5194/tc-2023-109">doi:
           10.5194/tc-2023-109</a> (preprint). -->
@@ -3714,7 +3714,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2024-03-19
+<p align="right">&nbsp;<br>Last modified: 2024-03-21
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
