Publication list updated.

--- a/publist.html
+++ b/publist.html
@@ -71,7 +71,7 @@ See also:
      C. Zhao and T. Zwinger. 2024.</a></dt>
 <dd> Evolution of the Antarctic Ice Sheet over the next three centuries
      from an ISMIP6 model ensemble.<br>
-     <i>Earth's Future</i> (submitted).</dd>
+     <i>Earth's Future</i> (in press).</dd>
 
 <dt> <a href="papers/2020s/24/Willeit_etal_2024_CP.html">
      Willeit, M., R. Calov, S. Talento, R. Greve, J. Bernales, V. Klemann,
@@ -3714,7 +3714,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2024-03-21
+<p align="right">&nbsp;<br>Last modified: 2024-07-12
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
