--- a/papers/2020s/24/Seroussi_etal_2024_EF.html
+++ b/papers/2020s/24/Seroussi_etal_2024_EF.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Ralf Greve">
   <meta name="content-language" content="en">
   <meta name="robots" content="index, follow">
-  <title>Seroussi and others (submitted)</title>
+  <title>Seroussi and others (in press)</title>
   <link href="../../../styles/ralf_style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -46,7 +46,7 @@ ISMIP6 model ensemble</h2>
 
 <hr>
 
-<p><i>Earth's Future</i> (submitted).</p>
+<p><i>Earth's Future</i> (in press).</p>
 
 </td></tr>
 </table>
@@ -54,7 +54,7 @@ ISMIP6 model ensemble</h2>
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p>&nbsp;<br><i>Last modified: 2024-02-13</i><br>&nbsp;</p>
+<p>&nbsp;<br><i>Last modified: 2024-07-12</i><br>&nbsp;</p>
 
 </td></tr>
 </table>
