Publication list updated.

--- a/papers/2020s/24/Seroussi_etal_2024_EF.html
+++ b/papers/2020s/24/Seroussi_etal_2024_EF.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Ralf Greve">
   <meta name="content-language" content="en">
   <meta name="robots" content="index, follow">
-  <title>Seroussi and others (in press)</title>
+  <title>Seroussi and others (2024)</title>
   <link href="../../../styles/ralf_style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -42,11 +42,17 @@ ISMIP6 model ensemble</h2>
 
 <h4 style="color:#000000;">Abstract</h4>
 
-<p>The Ice Sheet Model Intercomparison Project for CMIP6 (ISMIP6) is the primary effort of CMIP6 (Coupled Model Intercomparison Project &endash; Phase 6) focusing on ice sheets, designed to provide an ensemble of process-based projections of the ice-sheet contribution to sea-level rise over the 21st century. However, the behavior of the Antarctic Ice Sheet (AIS) beyond 2100 remains largely unknown: several instability mechanisms can develop on longer time scales, potentially destabilizing large parts of AIS. Projections of AIS evolution until 2300 are presented here, using an ensemble of 16 ice-flow models and forcing from global climate models. Under high-emission scenarios, the Antarctic sea-level contribution is limited to less than 30&nbsp;cm sea-level equivalent (SLE) by 2100, but increases rapidly thereafter to reach up to 4.4&nbsp;m&nbsp;SLE by 2300. Simulations including ice-shelf collapse lead to an additional 1.1&nbsp;m&nbsp;SLE on average by 2300, and can reach 6.9&nbsp;m&nbsp;SLE. Widespread retreat is observed on that timescale in most West Antarctic basins, leading to a collapse of large sectors of West Antarctica by 2300 in 30-40% of the ensemble. While the onset date of retreat varies among ice models, the rate of upstream propagation is highly consistent once retreat begins. Calculations of sea-level contribution including water density corrections lead to an additional &sim;10% SLE and up to 50% for contributions accounting for bedrock uplift in response to ice loading. Overall, these results highlight large sea-level contributions from the AIS and suggest that the choice of ice sheet model remains the leading source of uncertainty in multi-century projections.</p>
+<p>The Ice Sheet Model Intercomparison Project for CMIP6 (ISMIP6) is the primary effort of CMIP6 (Coupled Model Intercomparison Project &ndash; Phase 6) focusing on ice sheets, designed to provide an ensemble of process-based projections of the ice-sheet contribution to sea-level rise over the 21st century. However, the behavior of the Antarctic Ice Sheet (AIS) beyond 2100 remains largely unknown: several instability mechanisms can develop on longer time scales, potentially destabilizing large parts of AIS. Projections of AIS evolution until 2300 are presented here, using an ensemble of 16 ice-flow models and forcing from global climate models. Under high-emission scenarios, the Antarctic sea-level contribution is limited to less than 30&nbsp;cm sea-level equivalent (SLE) by 2100, but increases rapidly thereafter to reach up to 4.4&nbsp;m&nbsp;SLE by 2300. Simulations including ice-shelf collapse lead to an additional 1.1&nbsp;m&nbsp;SLE on average by 2300, and can reach 6.9&nbsp;m&nbsp;SLE. Widespread retreat is observed on that timescale in most West Antarctic basins, leading to a collapse of large sectors of West Antarctica by 2300 in 30-40% of the ensemble. While the onset date of retreat varies among ice models, the rate of upstream propagation is highly consistent once retreat begins. Calculations of sea-level contribution including water density corrections lead to an additional &sim;10% SLE and up to 50% for contributions accounting for bedrock uplift in response to ice loading. Overall, these results highlight large sea-level contributions from the AIS and suggest that the choice of ice sheet model remains the leading source of uncertainty in multi-century projections.</p>
 
 <hr>
 
-<p><i>Earth's Future</i> (in press).</p>
+<p><i>Earth's Future</i> <b>12</b>&nbsp;(9), e2024EF004561 (2024).
+   &nbsp;
+   <img style="vertical-align:middle"
+        src="../../../pictures/open_access_external_link_10x14.png"
+        alt="open access/external link"
+        title="open access/external link">
+   <a href="https://doi.org/10.5194/cp-20-597-2024">DOI</a></p>
 
 </td></tr>
 </table>
@@ -54,7 +60,7 @@ ISMIP6 model ensemble</h2>
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p>&nbsp;<br><i>Last modified: 2024-07-12</i><br>&nbsp;</p>
+<p>&nbsp;<br><i>Last modified: 2024-09-05</i><br>&nbsp;</p>
 
 </td></tr>
 </table>
