--- a/publist.html
+++ b/publist.html
@@ -71,7 +71,25 @@ See also:
      C. Zhao and T. Zwinger. 2024.</a></dt>
 <dd> Evolution of the Antarctic Ice Sheet over the next three centuries
      from an ISMIP6 model ensemble.<br>
-     <i>Earth's Future</i> (in press).</dd>
+     <i>Earth's Future</i> <b>12</b>&nbsp;(9), e2024EF004561.<br>
+     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     <a href="papers/2020s/24/Seroussi_etal_2024_EF.bib"><img
+     style="vertical-align:middle" src="pictures/bibtex_40x14.png"
+     alt="BibTeX"></a>
+     |
+     <a href="papers/2020s/24/Seroussi_etal_2024_EF.ris">RIS</a>
+     |
+     <img style="vertical-align:middle"
+          src="pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.1029/2024EF004561">DOI</a>
+     |
+     <img style="vertical-align:middle"
+          src="pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://hdl.handle.net/2115/xxxxx">HUSCAP</a></dd>
 
 <dt> <a href="papers/2020s/24/Willeit_etal_2024_CP.html">
      Willeit, M., R. Calov, S. Talento, R. Greve, J. Bernales, V. Klemann,
@@ -3714,7 +3732,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2024-07-12
+<p align="right">&nbsp;<br>Last modified: 2024-09-05
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
