--- a/index.html
+++ b/index.html
@@ -86,21 +86,21 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
     target="new">HU ELMS/Moodle</a> (account required)]
 </li>
 
-<li> Second semester 2023:
+<li> Second semester 2024:
 <br>
 <b>Advanced Course in Theoretical Glaciology</b>
 <br>
 &nbsp;&nbsp;&nbsp;
-[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=123498"
+[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=136777"
     target="new">HU ELMS/Moodle</a> (account required)]
 </li>
 
-<li>Second semester 2023:
+<li>Second semester 2024:
 <br>
 <b>Advanced Course in International Science Communication Methods</b>
 <br>
 &nbsp;&nbsp;&nbsp;
-[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=123476"
+[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=136730"
     target="new">HU ELMS/Moodle</a> (account required)]
 </li>
 
@@ -110,6 +110,24 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 <br>
 &nbsp;&nbsp;&nbsp;
 [<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=123484"
+    target="new">HU ELMS/Moodle</a> (account required)]
+</li> -->
+
+<!-- <li> Second semester 2023:
+<br>
+<b>Advanced Course in Theoretical Glaciology</b>
+<br>
+&nbsp;&nbsp;&nbsp;
+[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=123498"
+    target="new">HU ELMS/Moodle</a> (account required)]
+</li> -->
+
+<!-- <li>Second semester 2023:
+<br>
+<b>Advanced Course in International Science Communication Methods</b>
+<br>
+&nbsp;&nbsp;&nbsp;
+[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=123476"
     target="new">HU ELMS/Moodle</a> (account required)]
 </li> -->
 
@@ -147,7 +165,7 @@ Information about the <a href="https://www2.lowtem.hokudai.ac.jp/gisg/en/rironne
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2024-03-05
+<p align="right">&nbsp;<br>Last modified: 2024-09-20
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
