Publication list updated.

--- a/papers/2020s/23/Greve_etal_2023_JoG.html
+++ b/papers/2020s/23/Greve_etal_2023_JoG.html
@@ -1,19 +1,19 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 
-<HTML>
+<html>
 
-<HEAD>
+<head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <META NAME="author" CONTENT="Ralf Greve">
+  <meta name="author" content="Ralf Greve">
   <meta name="content-language" content="en">
   <meta name="robots" content="index, follow">
-  <TITLE>Greve and others (2023)</TITLE>
+  <title>Greve and others (2023)</title>
   <link href="../../../styles/ralf_style.css" rel="stylesheet" type="text/css">
-</HEAD>
+</head>
 
-<BODY BGCOLOR="#e0e0e0" TEXT="#000000">
+<body bgcolor="#e0e0e0" text="#000000">
 
 <p><img src="../../../pictures/spacer_transparent_1x1.gif"
         alt="Spacer" width="1" height="10"></p>
@@ -22,30 +22,30 @@
        bgcolor="#ffffff" width=750>
 <tr><td>
 
-<H2 style="margin-top:0px; color:#000000;">
+<h2 style="margin-top:0px; color:#000000;">
 Future projections for the Antarctic ice sheet until the year 2300 with a
-climate-index method</H2>
+climate-index method</h2>
 
-<P>R. Greve, C. Chambers, T. Obase, F. Saito, W.-L. Chan and A. Abe-Ouchi</P>
-
-<hr>
-
-<H4 style="color:#000000;">Abstract</H4>
-
-<P>As part of the Coupled Model Intercomparison Project Phase&nbsp;6 (CMIP6), the Ice Sheet Model Intercomparison Project for CMIP6 (ISMIP6) was devised to assess the likely sea-level-rise contribution from the Earth's ice sheets. Here, we construct an ensemble of climate forcings for Antarctica until the year 2300 based on original ISMIP6 forcings until 2100, combined with climate indices from simulations with the MIROC4m climate model until 2300. We then use these forcings to run simulations for the Antarctic ice sheet with the SICOPOLIS model. For the unabated warming pathway RCP8.5/SSP5-8.5, the ice sheet suffers a severe mass loss, amounting to ~&nbsp;1.5&nbsp;m&nbsp;SLE (sea-level equivalent) for the fourteen-experiment mean, and ~&nbsp;3.3&nbsp;m&nbsp;SLE for the most sensitive experiment. Most of this loss originates from West Antarctica. For the reduced emissions pathway RCP2.6/SSP1-2.6, the loss is limited to a three-experiment mean of ~&nbsp;0.16&nbsp;m&nbsp;SLE. The means are approximately two times larger than what was found in a previous study (Chambers and others, 2022, doi: 10.1017/jog.2021.124) that assumed a sustained late-21st-century climate beyond 2100, demonstrating the importance of post-2100 climate trends on Antarctic mass changes in the 22nd and 23rd centuries.</P>
+<p>R. Greve, C. Chambers, T. Obase, F. Saito, W.-L. Chan and A. Abe-Ouchi</p>
 
 <hr>
 
-<P><I>Journal of Glaciology</I>, doi: 10.1017/jog.2023.41 (2023).
+<h4 style="color:#000000;">Abstract</h4>
+
+<p>As part of the Coupled Model Intercomparison Project Phase&nbsp;6 (CMIP6), the Ice Sheet Model Intercomparison Project for CMIP6 (ISMIP6) was devised to assess the likely sea-level-rise contribution from the Earth's ice sheets. Here, we construct an ensemble of climate forcings for Antarctica until the year 2300 based on original ISMIP6 forcings until 2100, combined with climate indices from simulations with the MIROC4m climate model until 2300. We then use these forcings to run simulations for the Antarctic ice sheet with the SICOPOLIS model. For the unabated warming pathway RCP8.5/SSP5-8.5, the ice sheet suffers a severe mass loss, amounting to ~&nbsp;1.5&nbsp;m&nbsp;SLE (sea-level equivalent) for the fourteen-experiment mean, and ~&nbsp;3.3&nbsp;m&nbsp;SLE for the most sensitive experiment. Most of this loss originates from West Antarctica. For the reduced emissions pathway RCP2.6/SSP1-2.6, the loss is limited to a three-experiment mean of ~&nbsp;0.16&nbsp;m&nbsp;SLE. The means are approximately two times larger than what was found in a previous study (Chambers and others, 2022, doi: 10.1017/jog.2021.124) that assumed a sustained late-21st-century climate beyond 2100, demonstrating the importance of post-2100 climate trends on Antarctic mass changes in the 22nd and 23rd centuries.</p>
+
+<hr>
+
+<p><i>Journal of Glaciology</i> <b>69</b>&nbsp;(278), 1569-1579 (2023).
    &nbsp;
    <img style="vertical-align:middle"
         src="../../../pictures/open_access_external_link_10x14.png"
         alt="open access/external link"
         title="open access/external link">
-   <A HREF="https://doi.org/10.1017/jog.2023.41">DOI</A>
-<!-- <I>EarthArXiv</I>, <A HREF="https://doi.org/10.31223/X5F06Q">doi:
-10.31223/X5F06Q</A> (preprint). -->
-</P>
+   <a href="https://doi.org/10.1017/jog.2023.41">DOI</a>
+<!-- <i>EarthArXiv</i>, <a href="https://doi.org/10.31223/X5F06Q">doi:
+10.31223/X5F06Q</a> (preprint). -->
+</p>
 
 </td></tr>
 </table>
@@ -53,11 +53,11 @@ climate-index method</H2>
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p>&nbsp;<br><i>Last modified: 2023-07-12</i><br>&nbsp;</p>
+<p>&nbsp;<br><i>Last modified: 2024-12-12</i><br>&nbsp;</p>
 
 </td></tr>
 </table>
 
-</BODY>
+</body>
 
-</HTML>
+</html>
