--- a/publist.html
+++ b/publist.html
@@ -149,7 +149,7 @@ See also:
      2023.</a></dt>
 <dd> Future projections for the Antarctic ice sheet until the year 2300
      with a climate-index method.<br>
-     <i>Journal of Glaciology</i>, doi: 10.1017/jog.2023.41.<br>
+     <i>Journal of Glaciology</i> <b>69</b>&nbsp;(278), 1569-1579.<br>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="papers/2020s/23/Greve_etal_2023_JoG.bib"><img
      style="vertical-align:middle" src="pictures/bibtex_40x14.png"    
@@ -161,7 +161,13 @@ See also:
           src="pictures/open_access_external_link_10x14.png"
           alt="open access/external link"
           title="open access/external link">
-     <a href="https://doi.org/10.1017/jog.2023.41">DOI</a></dd>
+     <a href="https://doi.org/10.1017/jog.2023.41">DOI</a>
+     |
+     <img style="vertical-align:middle"
+          src="pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://hdl.handle.net/2115/xxxxx">HUSCAP</a></dd>
      <!-- |
      <img style="vertical-align:middle"
           src="pictures/open_access_external_link_10x14.png"
@@ -3732,7 +3738,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2024-09-06
+<p align="right">&nbsp;<br>Last modified: 2024-12-12
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
