Publication list updated.

--- a/publist.html
+++ b/publist.html
@@ -167,13 +167,7 @@ See also:
           src="pictures/open_access_external_link_10x14.png"
           alt="open access/external link"
           title="open access/external link">
-     <a href="https://hdl.handle.net/2115/xxxxx">HUSCAP</a></dd>
-     <!-- |
-     <img style="vertical-align:middle"
-          src="pictures/open_access_external_link_10x14.png"
-          alt="open access/external link"
-          title="open access/external link"> 
-     <a href="https://hdl.handle.net/2115/xxxxx">HUSCAP</a> -->
+     <a href="https://hdl.handle.net/2115/93767">HUSCAP</a></dd>
      <!-- <i>EarthArXiv</i>,
      <a href="https://doi.org/10.31223/X5F06Q">doi: 10.31223/X5F06Q</a>
      (preprint). -->
@@ -3738,7 +3732,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2024-12-12
+<p align="right">&nbsp;<br>Last modified: 2024-12-16
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
