Poster resources site updated.

--- a/resources/posters/Greve_2025_ArCSII_P2_16/index.html
+++ b/resources/posters/Greve_2025_ArCSII_P2_16/index.html
@@ -7,56 +7,65 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta name="author" content="Ralf Greve">
-  <meta name="description" content="Poster resources">
-  <meta name="keywords" content="Ralf, Greve">
   <meta name="content-language" content="en">
   <meta name="robots" content="index,follow">
   <title> Poster resources </title>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link href="../../../styles/ralf_style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<table align="center" cellpadding="25" cellspacing="0"
-       bgcolor="#ffffff" width=750>
-<tr><td>
+<hr>
+
+<h1 style="text-align:left">Coming soon...</h1>
 
 <hr>
 
-<h1 style="text-align:center">Coming soon...</h1>
-
-<hr>
+<h3 style="text-align:left">Collaborator acknowledgements</h3>
 
 <p>Coming soon...</p>
 
+<h3 style="text-align:left">Funding acknowledgements</h3>
+
+<p>Coming soon...</p>
+
+<h3 style="text-align:left">References</h3>
+
+<dl>
+
+<dt> Chambers, C., R. Greve, T. Obase, F. Saito and A. Abe-Ouchi.
+     2022.</dt>
+<dd> Mass loss of the Antarctic ice sheet until the year 3000 under a sustained
+     late-21st-century climate.<br>
+     <i>Journal of Glaciology</i> <b>68</b>&nbsp;(269), 605-617.
+     &nbsp;
+     <img style="vertical-align:middle"
+          src="../../../pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.1017/jog.2021.124"
+        target="new">DOI</a></dd>
+
+<dt> Greve, R. and C. Chambers. 2022.</dt>
+<dd> Mass loss of the Greenland ice sheet until the year 3000 under a sustained
+     late-21st-century climate.<br>
+     <i>Journal of Glaciology</i> <b>68</b>&nbsp;(269), 618-624.
+     &nbsp;
+     <img style="vertical-align:middle"
+          src="../../../pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.1017/jog.2022.9"
+        target="new">DOI</a></dd>
+
+</dl>
+
 <hr>
 
-<p class="small">
-Go to:
-<br>
-&nbsp;&nbsp;&nbsp;
-[<a href="../../../index.html">Ralf Greve's Homepage</a>]
-&nbsp;
-[<a href="https://www2.lowtem.hokudai.ac.jp/gisg/">Glacier and Ice Sheet Research Group</a>]
-<br>
-&nbsp;&nbsp;&nbsp;
-[<a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a>]
-&nbsp;
-[<a href="https://www.hokudai.ac.jp/">Hokkaido University</a>]
-</p>
-
-</td></tr>
-</table>
-
-<table align="center" cellpadding="0" cellspacing="0" width=750>
-<tr><td>
+<p>Go to: [<a href="../../../index.html">Ralf Greve's Homepage</a>]</p>
 
 <p align="right">&nbsp;<br>Last modified: 2025-02-04
 &nbsp;&nbsp;<br>&nbsp;</p>
-
-</td></tr>
-</table>
 
 </body>
 </html>
