Poster resources site updated.

--- a/resources/posters/Greve_2025_ArCSII_P2_16/index.html
+++ b/resources/posters/Greve_2025_ArCSII_P2_16/index.html
@@ -17,25 +17,57 @@
 
 <hr>
 
-<h1 style="text-align:left">Coming soon...</h1>
+<h1 style="text-align:left">Resources for poster P2_16 (ArCS II Final Symposium)
+</h1>
+
+<h2 style="text-align:left;color:black">Simulating the fate of the Earth's ice sheets in a warming world</h2>
+
+<p>presented by Ralf Greve
+<br>
+(Institute of Low Temperature Science <i>and</i> Arctic Research Center, Hokkaido University, Sapporo, Japan)
+</p>
 
 <hr>
 
-<h3 style="text-align:left">Collaborator acknowledgements</h3>
+<h3 style="text-align:left">Collaborators</h3>
 
-<p>Coming soon...</p>
+<p>Christopher Chambers<br>
+Institute of Low Temperature Science, Hokkaido University, Sapporo, Japan
+</p>
+
+<p>Takashi Obase<br>
+Atmosphere and Ocean Research Institute, University of Tokyo, Kashiwa, Japan
+</p>
+
+<p>Fuyuki Saito<br>
+Japan Agency for Marine-Earth Science and Technology (JAMSTEC), Yokohama, Japan
+</p>
+
+<p>Wing-Le Chan<br>
+Atmosphere and Ocean Research Institute, University of Tokyo, Kashiwa, Japan
+</p>
+
+<p>Ayako Abe-Ouchi<br>
+Atmosphere and Ocean Research Institute, University of Tokyo, Kashiwa, Japan
+</p>
+
+<p>Reinhard Calov<br>
+Potsdam Institute for Climate Impact Research (PIK Potsdam), Germany
+</p>
 
 <h3 style="text-align:left">Funding acknowledgements</h3>
 
-<p>Coming soon...</p>
+<p>Arctic Challenge for Sustainability project (ArCS II) of MEXT (program grant no. JPMXD1420318865).</p> 
+
+<p>JSPS KAKENHI Grant Nos. JP17H06104, JP17H06323.</p> 
+
+<p>JSPS Grant-in-Aid for Japan-France Integrated Action Program (SAKURA Program) No. JPJSBP120213203.</p> 
 
 <h3 style="text-align:left">References</h3>
 
-<dl>
-
-<dt> Chambers, C., R. Greve, T. Obase, F. Saito and A. Abe-Ouchi.
-     2022.</dt>
-<dd> Mass loss of the Antarctic ice sheet until the year 3000 under a sustained
+<p> Chambers, C., R. Greve, T. Obase, F. Saito and A. Abe-Ouchi.
+     2022.<br>
+     Mass loss of the Antarctic ice sheet until the year 3000 under a sustained
      late-21st-century climate.<br>
      <i>Journal of Glaciology</i> <b>68</b>&nbsp;(269), 605-617.
      &nbsp;
@@ -44,10 +76,47 @@
           alt="open access/external link"
           title="open access/external link">
      <a href="https://doi.org/10.1017/jog.2021.124"
-        target="new">DOI</a></dd>
+        target="new">DOI</a></p>
 
-<dt> Greve, R. and C. Chambers. 2022.</dt>
-<dd> Mass loss of the Greenland ice sheet until the year 3000 under a sustained
+<p> Goelzer, H. and 41 others. 2020.<br>
+     The future sea-level contribution of the Greenland ice sheet:
+     a multi-model ensemble study of ISMIP6.<br>
+     <i>The Cryosphere</i> <b>14</b>&nbsp;(9), 3071-3096.
+     &nbsp;
+     <img style="vertical-align:middle"
+          src="../../../pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.5194/tc-14-3071-2020"
+        target="new">DOI</a></p>
+
+<p> Greve, R., R. Calov, T. Obase, F. Saito, S. Tsutaki and A. Abe-Ouchi.
+     2020.<br>
+     ISMIP6 future projections for the Antarctic ice sheet with the model
+     SICOPOLIS.<br>
+     Technical report, Zenodo, doi: 10.5281/zenodo.3971232.
+     &nbsp;
+     <img style="vertical-align:middle"
+          src="../../../pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.5281/zenodo.3971232"
+        target="new">DOI</a></p>
+
+<p> Greve, R., C. Chambers and R. Calov. 2020.<br>
+    ISMIP6 future projections for the Greenland ice sheet with the model
+     SICOPOLIS.<br>
+     Technical report, Zenodo, doi: 10.5281/zenodo.3971251.
+     &nbsp;
+     <img style="vertical-align:middle"
+          src="../../../pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.5281/zenodo.3971251"
+        target="new">DOI</a></p>
+
+<p> Greve, R. and C. Chambers. 2022.<br>
+     Mass loss of the Greenland ice sheet until the year 3000 under a sustained
      late-21st-century climate.<br>
      <i>Journal of Glaciology</i> <b>68</b>&nbsp;(269), 618-624.
      &nbsp;
@@ -56,15 +125,64 @@
           alt="open access/external link"
           title="open access/external link">
      <a href="https://doi.org/10.1017/jog.2022.9"
-        target="new">DOI</a></dd>
+        target="new">DOI</a></p>
 
-</dl>
+<p> Greve, R., C. Chambers, T. Obase, F. Saito, W.-L. Chan
+     and A. Abe-Ouchi. 2023.<br>
+     Future projections for the Antarctic ice sheet until the year 2300
+     with a climate-index method.<br>
+     <i>Journal of Glaciology</i> <b>69</b>&nbsp;(278), 1569-1579.
+     &nbsp;
+     <img style="vertical-align:middle"
+          src="../../../pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.1017/jog.2023.41"
+        target="new">DOI</a></p>
+
+<p> Payne, A. J. and 63 others. 2021.<br>
+     Future sea level change under
+     Coupled Model Intercomparison Project Phase&nbsp;5 and Phase&nbsp;6
+     scenarios from the Greenland and Antarctic ice sheets.<br>
+     <i>Geophysical Research Letters</i> <b>48</b>&nbsp;(16),
+     e2020GL091741.
+     &nbsp;
+     <img style="vertical-align:middle"
+          src="../../../pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.1029/2020GL091741"
+        target="new">DOI</a></p>
+
+<p> Seroussi, H. and 46 others. 2020.<br>
+     ISMIP6 Antarctica: a multi-model ensemble of the Antarctic ice sheet
+     evolution over the 21st century.<br>
+     <i>The Cryosphere</i> <b>14</b>&nbsp;(9), 3033-3070.
+     &nbsp;
+     <img style="vertical-align:middle"
+          src="../../../pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.5194/tc-14-3033-2020"
+        target="new">DOI</a></p>
+
+<p> Seroussi, H. and 52 others. 2024.<br>
+     Evolution of the Antarctic Ice Sheet over the next three centuries
+     from an ISMIP6 model ensemble.<br>
+     <i>Earth's Future</i> <b>12</b>&nbsp;(9), e2024EF004561.
+     &nbsp;
+     <img style="vertical-align:middle"
+          src="../../../pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.1029/2024EF004561"
+        target="new">DOI</a></p>
 
 <hr>
 
 <p>Go to: [<a href="../../../index.html">Ralf Greve's Homepage</a>]</p>
 
-<p align="right">&nbsp;<br>Last modified: 2025-02-04
+<p align="right">&nbsp;<br>Last modified: 2025-02-07
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </body>
