--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 
 <ul>
 
-<li>First semester 2024:
+<li>First semester 2025:
 <br>
 <b>Fundamental Course in Cold Region Sciences</b>
 <br>
 &nbsp;&nbsp;&nbsp;
-[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=136779"
-    target="new">HU ELMS/Moodle</a> (account required)]
+[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=xxxxxx"
+    target="new">HU ELMS/Moodle</a> (account required) &rarr; coming soon]
 </li>
 
 <li> Second semester 2024:
@@ -103,33 +103,6 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 [<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=136730"
     target="new">HU ELMS/Moodle</a> (account required)]
 </li>
-
-<!-- <li>First semester 2023:
-<br>
-<b>Fundamental Course in Cold Region Sciences</b>
-<br>
-&nbsp;&nbsp;&nbsp;
-[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=123484"
-    target="new">HU ELMS/Moodle</a> (account required)]
-</li> -->
-
-<!-- <li> Second semester 2023:
-<br>
-<b>Advanced Course in Theoretical Glaciology</b>
-<br>
-&nbsp;&nbsp;&nbsp;
-[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=123498"
-    target="new">HU ELMS/Moodle</a> (account required)]
-</li> -->
-
-<!-- <li>Second semester 2023:
-<br>
-<b>Advanced Course in International Science Communication Methods</b>
-<br>
-&nbsp;&nbsp;&nbsp;
-[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=123476"
-    target="new">HU ELMS/Moodle</a> (account required)]
-</li> -->
 
 </ul>
 
@@ -165,7 +138,7 @@ Information about the <a href="https://www2.lowtem.hokudai.ac.jp/gisg/en/rironne
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2024-09-20
+<p align="right">&nbsp;<br>Last modified: 2025-02-19
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
